fix: scolling in purchase + discard phases
refactored div --> b-container to contain active accomplishment cards and inventory
previously, if there were 3 active accomplishments, the 3rd card got cut off because of custom scss styling

--- a/client/src/stylesheets/game/phases/NewRound.scss
+++ b/client/src/stylesheets/game/phases/NewRound.scss
@@ -9,7 +9,7 @@
 
 .outer {
   background-color: $light-shade-05;
-  height: 95%;
+  height: 85%;
   overflow-y: auto;
   overflow-x: hidden;
 }
